--- a/public_html/wp-content/themes/gfy/css/main.css
+++ b/public_html/wp-content/themes/gfy/css/main.css
@@ -92,10 +92,10 @@ html, body {
     user-select: none; }
   html h3, body h3 {
     font-family: 'Open Sans', sans-serif;
-    font-size: 32px;
+    font-size: 22px;
     line-height: 1.3;
-    font-weight: 400;
-    letter-spacing: 5px;
+    font-weight: 700;
+    letter-spacing: 0px;
     text-transform: uppercase;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -199,6 +199,25 @@ html, body {
     height: 20px;
     margin: 50px auto 20px auto;
     text-align: center; }
+  .content-area .threed-btn {
+    position: absolute;
+    right: 50px;
+    top: 350px;
+    opacity: 0;
+    display: none;
+    z-index: 5000;
+    cursor: pointer;
+    background-color: white;
+    -webkit-transition: all 0.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
+    -moz-transition: all 0.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
+    -ms-transition: all 0.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
+    -o-transition: all 0.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
+    transition: all 0.5s cubic-bezier(0.2, 0.75, 0.8, 0.95); }
+    .content-area .threed-btn h3.threetxt {
+      padding: 7px 10px 8px 12px; }
+  .content-area .threed-btn:hover {
+    background-color: #486177;
+    color: #FFF; }
   .content-area .images-cont {
     width: 1000px;
     height: auto;
@@ -220,7 +239,19 @@ html, body {
       .content-area .images-cont .img-container img.child {
         height: 150%;
         width: auto;
+        opacity: 1;
         transform: translate(-5px, -30px);
+        -webkit-transition: all 1.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
+        -moz-transition: all 1.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
+        -ms-transition: all 1.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
+        -o-transition: all 1.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
+        transition: all 1.5s cubic-bezier(0.2, 0.75, 0.8, 0.95); }
+      .content-area .images-cont .img-container img.threed-img {
+        height: 100%;
+        width: auto;
+        transform: translate(0, 0);
+        opacity: 0;
+        display: none;
         -webkit-transition: all 1.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
         -moz-transition: all 1.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
         -ms-transition: all 1.5s cubic-bezier(0.2, 0.75, 0.8, 0.95);
@@ -230,7 +261,7 @@ html, body {
       width: 1077px;
       height: 700px;
       position: absolute;
-      margin-left: auto;
+      margin-left: -30px;
       margin-right: auto;
       left: 0;
       right: 0;
@@ -240,12 +271,13 @@ html, body {
       .content-area .images-cont .img-container.large img.child {
         height: 100%;
         width: auto;
-        transform: translate(0, 0); }
-      .content-area .images-cont .img-container.large .threed-btn {
-        position: absolute;
-        right: 30px;
-        top: 350px;
-        padding: 10px; }
+        transform: translate(0, 0);
+        opacity: 1; }
+      .content-area .images-cont .img-container.large img.threed-img {
+        height: 100%;
+        width: auto;
+        transform: translate(0, 0);
+        opacity: 0; }
 
 html, body {
   width: 100%;
