--- a/public_html/wp-content/themes/gfy/style.css
+++ b/public_html/wp-content/themes/gfy/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: GFY Photo
+Theme Name: GFY Photo - 2015
 Author: Stig Christensen // Konstellation ApS
 Author URI: http://www.konstellation.dk
 Version: 1.0
